# luawrap

./: .gitignore  CMakeLists.txt
include/: LuaRegistry.h
sol2/sol/: sol.hpp
src/: LuaRegistry.cpp
test/: CMakeLists.txt  main.cpp
